removed unneeded code

--- a/health_app.kv
+++ b/health_app.kv
@@ -188,7 +188,7 @@ WindowManager:
 				ActionOverflow:
 					ActionButton:
 						text: 'Btn0'
-						icon: 'floppy'
+						# icon: 'floppy'
 					ActionButton:
 						text: 'Btn1'
 
