Android back button functionality

--- a/layout_files/Landing.kv
+++ b/layout_files/Landing.kv
@@ -34,8 +34,8 @@
 					# with_previous: False
 				# 	# on_release: root.chevron_left()
 				# ActionOverflow:
-					ActionButton:
-						text: 'Btn0'
+					# ActionButton:
+					# 	text: 'Btn0'
 						# icon: 'reset.png'
 				# 	ActionButton:
 				# 		text: 'Btn1'
