--- a/layout_files/AirPollution.kv
+++ b/layout_files/AirPollution.kv
@@ -13,6 +13,12 @@
 
 	BoxLayout:
 		orientation: 'vertical'
+		canvas.before:
+			Color:
+				rgba: BG_COLOR
+			Rectangle:
+				size: self.size
+				pos: self.pos
 
 		# MDTopAppBar:
 		# 	title: 'Air Pollution'
@@ -28,24 +34,32 @@
 					title: 'Air Pollution'
 					on_release: root.chevron_left()
 
-		Widget
-			size_hint_y:0.3
-		Label:
-			text: 'The Air Quality Index (AQI) is a measure of air pollution created by the United States Environmental Protection Agency. \n\nThe measure ranges from 0 to 500, with indices greater than 200 indicating risk to health.'
-			font_size:'14sp'
-			halign: 'left'
-			size_hint_x:0.8
-			pos_hint:{'center_x':0.5}
+		# Widget
+		# 	size_hint_y:0.3
+		BoxLayout:
+			Label:
+				text_size: root.width, None
+			    size: self.texture_size
+			    color: TXT_COLOR
+				text: 'The Air Quality Index (AQI) is a measure of air pollution created by the United States Environmental Protection Agency. \n\nThe measure ranges from 0 to 500, with indices greater than 200 indicating risk to health.'
+				font_size:'14sp'
+				halign: 'left'
+				# size_hint_x:0.8
+				pos_hint:{'center_x':0.5}
 
-		Label:
-			# font_size:'2xw0sp'
-			text: 'Answer the following questions about pollution mask usage'
-			# text_color:DARK_BLUE
-			theme_text_color:"Hint"
-			halign: 'left'
-			size_hint_x:0.8
-			# size_hint_x:0.5
-			pos_hint:{'center_x':0.5}
+		BoxLayout:
+			Label:
+				# font_size:'2xw0sp'
+				text_size: root.width, None
+			    size: self.texture_size
+			    color: TXT_COLOR
+				text: 'Answer the following questions about pollution mask usage'
+				# text_color:DARK_BLUE
+				theme_text_color:"Hint"
+				halign: 'left'
+				size_hint_x:0.8
+				# size_hint_x:0.5
+				pos_hint:{'center_x':0.5}
 
 		Button:
 			text:"Begin"
@@ -75,13 +89,12 @@
 
 	BoxLayout:
 		orientation: 'vertical'
-		# MDTopAppBar:
-		# 	title: 'Air Pollution'
-		# 	halign: 'left'
-		# 	left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-		# 	right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-		# 	# right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-		# 	elevation:8
+		canvas.before:
+			Color:
+				rgba: BG_COLOR
+			Rectangle:
+				size: self.size
+				pos: self.pos
 
 		ActionBar:
 			ActionView:
@@ -89,8 +102,28 @@
 					title: 'Air Pollution'
 					on_release: root.chevron_left()
 
-		# BoxLayout:
-		# 	size_hint_y:0.7
+		BoxLayout:
+			size_hint_y:1
+			orientation:'vertical'
+			pos_hint:{'center_x':0.5}
+			# BoxLayout:
+			Label:
+				text_size: root.width, None
+			    size: self.texture_size
+			    color: TXT_COLOR
+				text:air_Q_main
+				halign:'center'
+				pos_hint:{'center_x':0.5}
+
+			# BoxLayout:
+			Label:
+				id:air_pollution_q_label
+				text_size: root.width, None
+				color: TXT_COLOR
+			    size: self.texture_size
+				text: air_Q0
+				halign:'center'
+				pos_hint:{'center_x':0.5}
 
 			# MDTabs:
 			# 	id: android_tabs
@@ -261,20 +294,17 @@
 				text:'                     >                       '
 				on_release:root.arrow_right()
 
-	FloatLayout:
-		orientation: 'vertical'
-		Label:
-			pos:(50,950)
-			text: air_Q_main
-			# md_bg_color:0,0,1,0.05
-			size_hint_y:0.15
-			size_hint_x:0.9
-			text_color:1,1,1,1
 
 <AirPollutionScorePage>:
 	score_label:score_label
 	BoxLayout:
 		orientation: 'vertical'
+		canvas.before:
+			Color:
+				rgba: BG_COLOR
+			Rectangle:
+				size: self.size
+				pos: self.pos
 		# MDTopAppBar:
 
 		# 	title: 'Air Pollution'
@@ -290,11 +320,13 @@
 
 		Label:
 			text: 'Your score is:'
+			color: TXT_COLOR
 			halign: 'center'
 
 		Label:
 			id:score_label
 			text: ''
+			color: TXT_COLOR
 			halign: 'center'
 
 		Button:
