--- a/layout_files/PhysicalActivity.kv
+++ b/layout_files/PhysicalActivity.kv
@@ -6,6 +6,12 @@
 
     BoxLayout:
         orientation: 'vertical'
+        canvas.before:
+            Color:
+                rgba: BG_COLOR
+            Rectangle:
+                size: self.size
+                pos: self.pos
 
         # MDTopAppBar:
         #     title: physical_toolbar_title
@@ -25,6 +31,7 @@
             size_hint_y:0.3
         Label:
             text: physical_landing_blurb
+            color: TXT_COLOR
             font_size:'14sp'
             halign: 'left'
             size_hint_x:0.8
@@ -33,8 +40,9 @@
         Label:
             # font_size:'2xw0sp'
             text: physical_landing_subtitle
+            color: TXT_COLOR
             # text_color:DARK_BLUE
-            theme_text_color:"Hint"
+            # theme_text_color:"Hint"
             halign: 'left'
             size_hint_x:0.8
             # size_hint_x:0.5
@@ -66,6 +74,12 @@
 <PhysicalActivityPage>:
     BoxLayout:
         orientation: 'vertical'
+        canvas.before:
+            Color:
+                rgba: BG_COLOR
+            Rectangle:
+                size: self.size
+                pos: self.pos
         # MDTopAppBar:
         #     title: physical_toolbar_title
         #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
@@ -192,6 +206,12 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
+        canvas.before:
+            Color:
+                rgba: BG_COLOR
+            Rectangle:
+                size: self.size
+                pos: self.pos
         # MDTopAppBar:
 
         #     title: physical_toolbar_title
@@ -208,10 +228,12 @@
 
         Label:
             text: 'Your score is:'
+            color: TXT_COLOR
             halign: 'center'
 
         Label:
             id:score_label
+            color: TXT_COLOR
             text: ''
             halign: 'center'
 
