--- a/layout_files/AirPollution.kv
+++ b/layout_files/AirPollution.kv
@@ -86,7 +86,7 @@
 					root.arrow_right()
 
 <AirPollutionPage>:
-
+	# air_pollution_q_label:air_pollution_q_label
 	BoxLayout:
 		orientation: 'vertical'
 		canvas.before:
@@ -118,6 +118,7 @@
 			# BoxLayout:
 			Label:
 				id:air_pollution_q_label
+				# name:"air_pollution_q_label"
 				text_size: root.width, None
 				color: TXT_COLOR
 			    size: self.texture_size
