--- a/layout_files/templates.kv
+++ b/layout_files/templates.kv
@@ -198,15 +198,17 @@
 # =======================================
 
 <NavButtons>:
-    BoxLayout:
-        orientation: 'horizontal'
-        size_hint_y:0.3
-        Button:
-            text:'                     <                       '
-            on_release:self.parent.parent.root.arrow_left()
-
-        Widget:
-            size_hint_x:0.1
-        Button:
-            text:'                     >                       '
-            on_release:self.parent.parent.root.arrow_right()
+    orientation: 'horizontal'
+    size_hint_y:0.3
+    Button:
+        background_color: BTN_COLOR
+        size_hint_y:0.5
+        text:'                     <                       '
+        on_release:root.parent.parent.arrow_left()
+    Button:
+        background_color: BTN_COLOR
+        size_hint_y:0.5
+        text:'                     >                       '
+        on_release:
+            # root.parent.ids['AirPollutionPage'].ids['android_tabs'].switch_tab('1')
+            root.parent.parent.arrow_right()
