--- a/layout_files/AirPollution.kv
+++ b/layout_files/AirPollution.kv
@@ -12,12 +12,10 @@
 
 # ----
 <AirPollutionLandingPage>:
-
 	BoxLayout:
 		orientation: 'vertical'
 
 		AirP_ActionBar:
-
 
 		BoxLayout:
 			orientation: 'vertical'
@@ -47,8 +45,6 @@
 			    size: self.texture_size
 			    color: TXT_COLOR
 				text: 'Answer the following questions about pollution mask usage'
-				# text_color:DARK_BLUE
-				# theme_text_color:"Hint"
 				halign: 'center'
 				size_hint_x:0.8
 				# size_hint_x:0.5
@@ -60,27 +56,11 @@
 			font_style:'Button'
 			size_hint:0.7,0.25
 			pos_hint:{'center_x':0.5}
-			on_release:
-				# root.parent.ids['AirPollutionPage'].ids['android_tabs'].switch_tab('1')
-				root.arrow_right()
+			on_release:	root.arrow_right()
 
 		NavButtons:
-		# BoxLayout:
-		# 	orientation: 'horizontal'
-		# 	size_hint_y:0.3
-		# 	Button:
-		# 		background_color: BTN_COLOR
-		# 		size_hint_y:0.5
-		# 		text:'                     <                       '
-		# 		on_release:root.arrow_left()
-		# 	Button:
-		# 		background_color: BTN_COLOR
-		# 		size_hint_y:0.5
-		# 		text:'                     >                       '
-		# 		on_release:
-		# 			# root.parent.ids['AirPollutionPage'].ids['android_tabs'].switch_tab('1')
-		# 			root.arrow_right()
 
+# ----
 <AirPollutionPage>:
 	BoxLayout:
 		orientation: 'vertical'
@@ -94,13 +74,13 @@
 
 			Label:
 				size_hint_x:0.8
-				# size_hint_y:0.6
-				canvas.before:
-				    Color:
-				        rgba: 1, .3, .4, .85
-				    Rectangle:
-				        size: self.size
-				        pos: self.pos
+				# # size_hint_y:0.6
+				# canvas.before:
+				#     Color:
+				#         rgba: 1, .3, .4, .85
+				#     Rectangle:
+				#         size: self.size
+				#         pos: self.pos
 				id:label1
 				text_size: root.width*self.size_hint_x, None
 			    size: self.texture_size
@@ -135,85 +115,45 @@
 				text:'Agree'
 				on_release:
 					root.button_press(6)
-
 			Widget:
 				size_hint_y:0.05
 			MyButton2:
-				id:button5
-				icon:'numeric-5'
 				text:'Somewhat agree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				# size_hint_y:0.8
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(5)
 			Widget:
 				size_hint_y:0.05
+
 			MyButton2:
-				id:button4
-				icon:'numeric-4'
 				text:'Neutral'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(4)
 			Widget:
 				size_hint_y:0.05
+
 			MyButton2:
-				id:button3
-				icon:'numeric-3'
 				text:'Somewhat disagree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(3)
 			Widget:
 				size_hint_y:0.05
+
 			MyButton2:
-				id:button2
-				icon:'numeric-2'
 				text:'Disagree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(2)
 			Widget:
 				size_hint_y:0.05
+
 			MyButton2:
-				id:button1
-				icon:'numeric-1'
 				text:'Strongly Disagree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(1)
+
 		NavButtons:
-		# BoxLayout:
-		# 	orientation: 'horizontal'
-		# 	size_hint_y:0.3
-		# 	Button:
-		# 		size_hint_y:0.5
-		# 		text:'                     <                       '
-		# 		on_release:root.arrow_left()
 
-		# 	Button:
-		# 		size_hint_y:0.5
-		# 		text:'                     >                       '
-		# 		on_release:root.arrow_right()
-
-
+# ----
 <AirPollutionScorePage>:
 	score_label:score_label
 	BoxLayout:
 		orientation: 'vertical'
 
 		AirP_ActionBar:
-
 
 		BoxLayout:
 			orientation:'vertical'
@@ -231,42 +171,19 @@
 				font_size:'34sp'
 
 			MyButton2:
-				# id:restart_button
 				text:'Try Again'
-				# font_style:'Button'
-				# size_hint_x:0.7
-				# pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-				# on_release:root.reset_quiz()
 			Widget:
 				size_hint_y:0.05
 			MyButton2:
-				# id:next_section
 				text:'Back'
-				# font_style:'Button'
-				# size_hint_x:0.7
-				# pos_hint:{'center_x': 0.5, 'center_y': 0.5}
 				on_release:root.chevron_left()
 			Widget:
 				size_hint_y:0.05
 			MyButton2:
-				# id:next_section
 				text:'Next'
-				# font_style:'Button'
-				# size_hint_x:0.7
-				# pos_hint:{'center_x': 0.5, 'center_y': 0.5}
 				on_release:root.arrow_right()
 
 			Widget:
 				size_hint_y:0.2
 
 		NavButtons:
-		# BoxLayout:
-		# 	orientation: 'horizontal'
-		# 	Button:
-		# 		size_hint_x:1
-		# 		text:'                     <                       '
-		# 		on_release:root.arrow_left()
-		# 	Button:
-		# 		size_hint_x:1
-		# 		text:'                     >                       '
-		# 		on_release:root.arrow_right()
