--- a/layout_files/AirPollution.kv
+++ b/layout_files/AirPollution.kv
@@ -21,12 +21,12 @@
 			orientation: 'vertical'
 			Label:
 				size_hint_x:0.8
-				canvas.before:
-				    Color:
-				        rgba: 1, .3, .4, .85
-				    Rectangle:
-				        size: self.size
-				        pos: self.pos
+				# canvas.before:
+				#     Color:
+				#         rgba: 1, .3, .4, .85
+				#     Rectangle:
+				#         size: self.size
+				#         pos: self.pos
 				id:label1
 				text_size: root.width*self.size_hint_x, None
 			    size: self.texture_size
