--- a/layout_files/Landing.kv
+++ b/layout_files/Landing.kv
@@ -31,6 +31,7 @@
 				# 	icon:"pics/left.png"
 				ActionButton:
 					text:"Home"
+					background_down: self.background_normal
 				ActionButton:
 					important: True
 					text:FILLER
