--- a/health_app.kv
+++ b/health_app.kv
@@ -14,7 +14,7 @@
 
 #:set BTN_COLOR 69/255, 90/255, 100/255, 0.9
 
-#:set FILLER "                                                             "
+#:set FILLER "                                             "
 
 #:include layout_files/templates.kv
 #:include layout_files/AirPollution.kv
@@ -196,18 +196,31 @@ WindowManager:
 
 			BoxLayout:
 				orientation:'horizontal'
-				BoxLayout:
-					orientation:'vertical'
-					Label:
-						text: 'Your Score\n(higher is better)'
-						halign: 'center'
-						font_size:'10sp'
-						color: TXT_COLOR
-
-					Label:
-						text: ''
-						halign: 'center'
+				# BoxLayout:
+				# 	orientation:'vertical'
 				Label:
+					# canvas.before:
+					#     Color:
+					#         rgba: 1, .3, .4, .85
+					#     Rectangle:
+					#         size: self.size
+					#         pos: self.pos
+					text: 'Your Score:\n(higher is better)'
+					halign: 'center'
+					font_size:'14sp'
+					color: TXT_COLOR
+
+					# Label:
+					# 	text: ''
+					# 	halign: 'center'
+
+				Label:
+					# canvas.before:
+					#     Color:
+					#         rgba: 0, .3, .4, .45
+					#     Rectangle:
+					#         size: self.size
+					#         pos: self.pos
 					color: TXT_COLOR
 					id:score_label
 					text: '0'
@@ -218,18 +231,25 @@ WindowManager:
 					text: '    Reset    '
 					halign: 'center'
 					# size_hint:(1,1)
-					size_hint_y:0.5
+					# size_hint_y:0.5
 					size_hint_x:1
 					# _no_ripple_effect: True
 
 		Label:
 			text:''
-			size_hint_y:0.1
+			size_hint_y:0.005
+			canvas.before:
+				Color:
+				    # rgba: 0, 1, 1, .6
+				    rgba: 252/255, 186/255, 3/255, 1
+			    Rectangle:
+			        size: self.size
+			        pos: self.pos
 
 		ScrollView:
 			scroll_type: ['bars','content']
 			# scroll_wheel_distance: 20
-			bar_width: 20
+			bar_width: 10
 			do_scroll_x: False
 			do_scroll_y: True
 			bar_inactive_color: .55, .55, .55, 1
@@ -361,15 +381,16 @@ WindowManager:
 		# # ActionPrevious:
 		ActionButton:
 			icon:"pics/left.png"
+			important: True
 			on_release: root.chevron_left(root.parent.parent)
 		ActionButton:
 			text:"Air Pollution"
+			important: True
+			background_down: self.background_normal
+		ActionButton:
+			# text:"  "
 		ActionButton:
 			important: True
-			text:FILLER
-		ActionButton:
-			important: True
-			# text:"btn0"
 			icon:'pics/sun.png'
 			on_release: app.toggle_theme()
 
