--- a/layout_files/AirPollution.kv
+++ b/layout_files/AirPollution.kv
@@ -15,7 +15,8 @@
 	BoxLayout:
 		orientation: 'vertical'
 
-		AirP_ActionBar:
+		MyActionBar:
+			title:"aaa"
 
 		BoxLayout:
 			orientation: 'vertical'
@@ -65,8 +66,9 @@
 	BoxLayout:
 		orientation: 'vertical'
 
-		AirP_ActionBar:
-
+		MyActionBar:
+			# NAME: 'AAAA'
+			title:"LLL"
 		BoxLayout:
 			size_hint_y:0.6
 			orientation:'vertical'
@@ -160,7 +162,7 @@
 	BoxLayout:
 		orientation: 'vertical'
 
-		AirP_ActionBar:
+		MyActionBar:
 
 		BoxLayout:
 			orientation:'vertical'
